# openai-web

./: .gitignore  Makefile  README.md
scripts/: push-image.sh  terraform.sh
service/: Dockerfile  Dockerfile.lambda  Dockerfile.orig  Makefile  entry.sh  http-serve.py  lambda_chat.py  pyproject.toml  scrape.py  vopenai.py
terraform/: .env.example  .gitignore  Makefile  main.tf  outputs.tf  variables.tf
terraform/env/dev/: main.tf
terraform/env/global/: main.tf  outputs.tf  variables.tf
terraform/env/prod/: main.tf  variables.tf
terraform/modules/apigateway/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf
terraform/modules/ecr/: main.tf
terraform/modules/lambda/: Dockerfile  main.tf  outputs.tf  variables.tf
