[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto.git", rev = "bd7de203e16e949666b2844b3dec1eb7c4ed523c"}
boilerpy3 = "^1.0.7"
boto3 = "^1.28.79"
fastapi = "^0.109.1"
html5lib = "^1.1"
ipython = "^8.17.2"
openai = {extras = ["embeddings", "wandb", "datalib"], version = "^1.1.1"}
playwright = "1.33.0"
pydantic = "^1.10.7"
pynacl = "^1.5.0"
python = "^3.11"
python-dotenv = "^1.0.0"
retrying = "^1.3.4"
uvicorn = "^0.24.0.post1"
websockets = "^12.0"
languagemodels = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
